dg bump; run.sh no IP

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ DOCKER4GIS_VERSION=0.0.93
 DOCKER4GIS_VERSION=0.0.94
 DOCKER4GIS_VERSION=0.0.95
 DOCKER4GIS_VERSION=0.0.99
+DOCKER4GIS_VERSION=0.0.100
