--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ DOCKER4GIS_VERSION=0.0.95
 DOCKER4GIS_VERSION=0.0.99
 DOCKER4GIS_VERSION=0.0.100
 DOCKER4GIS_VERSION=0.0.103
+DOCKER4GIS_VERSION=0.0.107
