--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ DOCKER4GIS_VERSION=0.0.100
 DOCKER4GIS_VERSION=0.0.103
 DOCKER4GIS_VERSION=0.0.107
 DOCKER4GIS_VERSION=0.0.131
+DOCKER4GIS_VERSION=0.0.152
