--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ DOCKER4GIS_VERSION=0.0.107
 DOCKER4GIS_VERSION=0.0.131
 DOCKER4GIS_VERSION=0.0.152
 DOCKER4GIS_VERSION=0.0.161
+DOCKER4GIS_VERSION=0.0.204
+DOCKER4GIS_VERSION=0.0.205
