--- a/.env
+++ b/.env
@@ -14,3 +14,4 @@ DOCKER4GIS_VERSION=0.0.152
 DOCKER4GIS_VERSION=0.0.161
 DOCKER4GIS_VERSION=0.0.204
 DOCKER4GIS_VERSION=0.0.205
+DOCKER4GIS_VERSION=0.0.212
