dg push --no-save

--- a/.env
+++ b/.env
@@ -15,3 +15,4 @@ DOCKER4GIS_VERSION=0.0.161
 DOCKER4GIS_VERSION=0.0.204
 DOCKER4GIS_VERSION=0.0.205
 DOCKER4GIS_VERSION=0.0.212
+DOCKER4GIS_VERSION=0.0.213
