--- a/azure-pipeline-continuous-integration.yml
+++ b/azure-pipeline-continuous-integration.yml
@@ -32,3 +32,7 @@ stages:
     - bash: |
         npx --yes docker4gis@latest push
       displayName: docker4gis push
+    
+    - bash: |
+        npx --yes docker4gis@latest push --no-save 16 3.4
+      displayName: docker4gis push --no-save 16 3.4
