--- a/.env
+++ b/.env
@@ -17,3 +17,4 @@ DOCKER4GIS_VERSION=0.0.205
 DOCKER4GIS_VERSION=0.0.212
 DOCKER4GIS_VERSION=0.0.213
 DOCKER4GIS_VERSION=0.0.214
+DOCKER4GIS_VERSION=0.0.215
