fix dg push --no-save

--- a/.env
+++ b/.env
@@ -18,3 +18,4 @@ DOCKER4GIS_VERSION=0.0.212
 DOCKER4GIS_VERSION=0.0.213
 DOCKER4GIS_VERSION=0.0.214
 DOCKER4GIS_VERSION=0.0.215
+DOCKER4GIS_VERSION=0.0.216
