--- a/.env
+++ b/.env
@@ -19,3 +19,4 @@ DOCKER4GIS_VERSION=0.0.213
 DOCKER4GIS_VERSION=0.0.214
 DOCKER4GIS_VERSION=0.0.215
 DOCKER4GIS_VERSION=0.0.216
+DOCKER4GIS_VERSION=0.0.217
