COPY conf not ONBUILD so that extension images can put it at the bottom of their Dockerfile

--- a/.env
+++ b/.env
@@ -20,3 +20,4 @@ DOCKER4GIS_VERSION=0.0.214
 DOCKER4GIS_VERSION=0.0.215
 DOCKER4GIS_VERSION=0.0.216
 DOCKER4GIS_VERSION=0.0.217
+DOCKER4GIS_VERSION=0.0.236
