docker4gis-bump

--- a/.env
+++ b/.env
@@ -21,3 +21,4 @@ DOCKER4GIS_VERSION=0.0.215
 DOCKER4GIS_VERSION=0.0.216
 DOCKER4GIS_VERSION=0.0.217
 DOCKER4GIS_VERSION=0.0.236
+DOCKER4GIS_VERSION=0.0.239
