--- a/.env
+++ b/.env
@@ -22,3 +22,4 @@ DOCKER4GIS_VERSION=0.0.216
 DOCKER4GIS_VERSION=0.0.217
 DOCKER4GIS_VERSION=0.0.236
 DOCKER4GIS_VERSION=0.0.239
+DOCKER4GIS_VERSION=0.0.240
