--- a/.env
+++ b/.env
@@ -23,3 +23,4 @@ DOCKER4GIS_VERSION=0.0.217
 DOCKER4GIS_VERSION=0.0.236
 DOCKER4GIS_VERSION=0.0.239
 DOCKER4GIS_VERSION=0.0.240
+DOCKER4GIS_VERSION=0.0.251
