dg bump and default EXCLUDE_SCHEMA value

--- a/.env
+++ b/.env
@@ -24,3 +24,4 @@ DOCKER4GIS_VERSION=0.0.236
 DOCKER4GIS_VERSION=0.0.239
 DOCKER4GIS_VERSION=0.0.240
 DOCKER4GIS_VERSION=0.0.251
+DOCKER4GIS_VERSION=0.0.256
