--- a/template/Dockerfile
+++ b/template/Dockerfile
@@ -8,11 +8,10 @@ ENV POSTFIX_DOMAIN=template.example.com
 # RUN addmailbox.sh {login} 'Full Name'
 RUN addmailbox.sh noreply 'Example.com Template Service'
 
-# The following schemas are skipped on `dump` or `upgrade`;
-# use `dump_schema` and `restore_schema` for those.
-# E.g. (see https://www.postgresql.org/docs/current/app-psql.html#APP-PSQL-PATTERNS):
-# ENV EXCLUDE_SCHEMA=(interpolatie|utils)
-ENV EXCLUDE_SCHEMA=
+# The following schemas are skipped on `dump` or `upgrade`; use `dump_schema`
+# and `restore_schema` for those. For syntax, see
+# https://www.postgresql.org/docs/current/app-psql.html#APP-PSQL-PATTERNS.
+ENV EXCLUDE_SCHEMA=(tiger|tiger_data|topology)
 
 # On container start, /ddl/conf.sh is executed.
 COPY conf/ddl /ddl
